...
					<View
						style={[
							styles.textArea,
							{ backgroundColor: themes[theme].messageboxBackground },
							!recording && editing && { backgroundColor: themes[theme].chatComponentBackground }
						]}
						testID='messagebox'>
						{textInputAndButtons}
						{recordAudio}
					</View>
					{this.renderSendToChannel()}
					{this.renderEmojiSearchbar()}
				</View>
...
